# toolbrain-tracing

./: .env.example  .gitignore  README.md  pyproject.toml  start_toolbrain.ps1
data/ToolBrain OTLP Trace Samples/: sample_13_governance_status.json  sample_14_failed_status.json  sample_1_simple_success.json
data/TraceBrain OTLP Trace Samples/: sample_10_partial_failure.json  sample_11_episode_group_attempt_1.json  sample_12_episode_group_attempt_2.json  sample_13_governance_status.json  sample_14_failed_status.json  sample_1_simple_success.json  sample_2_complex_multistep.json  sample_3_tool_error.json  sample_4_self_correction.json  sample_5_multi_tool_orchestration.json  sample_6_no_tool_call.json  sample_7_parallel_calls.json  sample_8_clarifying_question.json  sample_9_looping_behavior.json
demo/: converter.py  financial_agent_scenario.py  scenario_utils.py  terminal.py
docker/: Dockerfile  README.md  docker-compose.yml
docs/: Converter.md  Reconstructor.md
my_agent_project/: converter.py  run_my_agent.py
scripts/: e2e_test.ps1  smolagent_demo.py
src/examples/: app.py  seed_tracestore_samples.py
src/toolbrain_tracing/: cli.py  config.py  constants.py  main.py  requirements.txt
src/toolbrain_tracing/api/v1/: endpoints.py
src/toolbrain_tracing/configs/: settings.json
src/toolbrain_tracing/core/: curator.py  librarian.py  llm_providers.py  store.py
src/toolbrain_tracing/core/services/: __init__.py  embedding.py
src/toolbrain_tracing/db/: base.py
src/toolbrain_tracing/evaluators/: judge_agent.py
src/toolbrain_tracing/sdk/: __init__.py  agent_tools.py  client.py
src/tracebrain/: __init__.py  cli.py  config.py  main.py  paths.py  requirements.txt
src/tracebrain/api/v1/: __init__.py  endpoints.py
src/tracebrain/configs/: settings.json
src/tracebrain/core/: curator.py  librarian.py  llm_providers.py  schema.py  store.py
src/tracebrain/core/services/: __init__.py  embedding.py
src/tracebrain/db/: base.py  session.py
src/tracebrain/evaluators/: __init__.py  judge_agent.py
src/tracebrain/sdk/: __init__.py  agent_tools.py  client.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/chat/: ChatMessage.tsx  ChatMessages.tsx  ChatSuggestions.tsx  Icons.tsx  Librarian.tsx  TraceSources.tsx
web/src/contexts/: ChatContext.tsx  SettingsContext.tsx  TraceContext.tsx
web/src/pages/: DashboardPage.tsx  ExplorerPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx  TracePage.tsx  TrainingPlanPage.tsx
web/src/styles/: CustomScrollBar.tsx  customScrollBar.ts  theme.ts
web/src/types/: trace.ts
(+54 files in other folders)
